updated punctuation in portfolio page

--- a/portfolio.Rmd
+++ b/portfolio.Rmd
@@ -24,7 +24,7 @@ create_proj_card(
   title = "Analysis of Top 50 Players in 2020-2021 NHL Season",
   text = "Dashboard created by myself and a partner. 
   I was tasked with creating the shell of the dashboard along with the 
-  research questions tabs and conclusion tabs",
+  research questions tabs and conclusion tabs.",
   text2 = ""
 )
 ```
